--- a/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
@@ -1,2 +1,6 @@
 LeadViewInfo:
   convert_lead_module: "//div[@id='sidebar']//tr[2]//a"
+FinancialTransactionsPage:
+  transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
+  transaction_type_drop_down: "//td[6]/div/div[1]/button"
+  modified_time_element: "(//*[@id='listBody']//tr/td[15])[%s]"
