--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -103,8 +103,8 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #
-#- name: finmarket
-#  config_file: finmarket.yml
+- name: finmarket
+  config_file: finmarket.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
 #- name: soarfx
@@ -132,8 +132,8 @@ brands:
 #
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #- name: otcapital
