--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -6,62 +6,62 @@ brands:
 
 - name: royal_cfds
   config_file: royal_cfds.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
-- name: hamiltonfordgroup
-  config_file: hamiltonfordgroup.yml
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-- name: solocapitlas
-  config_file: solocapitlas.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
-- name: optionstars
-  config_file: optionstars.yml
-- name: uft
-  config_file: uft.yml
-- name: brokerz
-  config_file: brokerz.yml
-- name: 4xfx
-  config_file: 4xfx.yml
-- name: herdos
-  config_file: herdos.yml
-- name: ptbanc
-  config_file: ptbanc.yml
-- name: intelligent_capital
-  config_file: intelligent_capital.yml
-- name: solid_fx
-  config_file: solid_fx.yml
-- name: FXMarketPro
-  config_file: fx_markets_pro.yml
-- name: q8
-  config_file: q8.yml
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: axa_markets
-  config_file: axa_markets.yml
-- name: aztrades
-  config_file: aztrades.yml
-- name: bots
-  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: firstindex
-  config_file: firstindex.yml
-- name: coinstec
-  config_file: coinstec.yml
-- name: tradospot
-  config_file: tradospot.yml
-- name: 24btcmarket
-  config_file: 24btcmarket.yml
-- name: marketsplus
-  config_file: marketsplus.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#- name: hamiltonfordgroup
+#  config_file: hamiltonfordgroup.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#- name: optionstars
+#  config_file: optionstars.yml
+#- name: uft
+#  config_file: uft.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
+#- name: herdos
+#  config_file: herdos.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#- name: intelligent_capital
+#  config_file: intelligent_capital.yml
+#- name: solid_fx
+#  config_file: solid_fx.yml
+#- name: FXMarketPro
+#  config_file: fx_markets_pro.yml
+#- name: q8
+#  config_file: q8.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: bots
+#  config_file: bots.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#- name: firstindex
+#  config_file: firstindex.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
+#- name: marketsplus
+#  config_file: marketsplus.yml
 
 
 
