--- a/src/main/python/ui/crm/model/BrandsXpath/finmarket_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/finmarket_xpath.yml
@@ -7,3 +7,12 @@ ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/button"
   country_input: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+  choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
+  choose_number: "//span[contains(text(), '%s')]"
+
+
+
