--- a/src/main/python/ui/crm/model/BrandsXpath/finmarket_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/finmarket_xpath.yml
@@ -12,7 +12,7 @@ ClientProfilePage:
   credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
   i_confirm_checkbox: "//*[@name='confirm']"
   choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
-  choose_number: "//span[contains(text(), '%s')]"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
 
 
 
