--- a/src/main/python/ui/crm/model/BrandsXpath/fxpmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/fxpmarkets_xpath.yml
@@ -4,3 +4,9 @@ FinancialTransactionsPage:
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
   modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
   deposits_tab: "//li[contains(text(),'Deposit')]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+  choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
