--- a/src/main/python/ui/crm/model/BrandsXpath/itrader_global_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/itrader_global_xpath.yml
@@ -12,3 +12,9 @@ FinancialTransactionsPage:
   deposits_tab: "//li[contains(text(),'Deposits')]"
   withdraw_tab: "//li[contains(text(),'Withdraw')]"
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+  choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
