--- a/src/main/python/ui/crm/model/BrandsXpath/kbcapitals_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/kbcapitals_xpath.yml
@@ -3,3 +3,9 @@ FinancialTransactionsPage:
   client_name_element: "(//*[@id='listBody']//tr/td[4])[%s]"
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+  choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
