--- a/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
@@ -8,3 +8,9 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
 LeadDetailViewInfo:
     referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
+ClientProfilePage:
+  deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+  choose_account_drop_down: "//*[@id='ClientDepositConfirmation']/div[2]/div[2]/div/button"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
