--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -4,12 +4,10 @@ brands:
 #
 ## production environmets - new forex
 
-#- name: royal_cfds
-#  config_file: royal_cfds.yml
+- name: royal_cfds
+  config_file: royal_cfds.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
-#- name: hamiltonfordgroup
-#  config_file: hamiltonfordgroup.yml
 #- name: forexbestmarket
 #  config_file: forexbestmarket.yml
 #- name: newrichmarkets
@@ -58,8 +56,8 @@ brands:
 #  config_file: coinstec.yml
 #- name: tradospot
 #  config_file: tradospot.yml
-- name: 24btcmarket
-  config_file: 24btcmarket.yml
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
 #- name: marketsplus
 #  config_file: marketsplus.yml
 
@@ -88,6 +86,8 @@ brands:
 #  config_file: mpcrypto.yml
 #- name: baronsvc
 #  config_file: baronsvc.yml
+#- name: hamiltonfordgroup
+#  config_file: hamiltonfordgroup.yml
 
 
 
