--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -103,8 +103,8 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-- name: finmarket
-  config_file: finmarket.yml
+#- name: finmarket
+#  config_file: finmarket.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
 #- name: soarfx
@@ -125,8 +125,8 @@ brands:
 ##  config_file: 24fxm.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
-#- name: alphabetfx
-#  config_file: alphabetfx.yml
+- name: alphabetfx
+  config_file: alphabetfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
 #
