--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,15 +1,15 @@
 brands:
 
-- name: royal_cfds
-  config_file: royal_cfds.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-- name: solocapitlas
-  config_file: solocapitlas.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
 
 
 
