--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,5 +1,7 @@
 brands:
 
+- name: newforexstaging
+  config_file: new_forex_staging.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
