--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ pytest-metadata==1.7.0
 selenium==3.9.0
 setuptools-scm==2.0.0
 six==1.11.0
+python-dateutil
+allure-behave
 pytest-ordering
+pytest-allure-adaptor
 pyyaml
 xlsxwriter
 unittest-xml-reporting
