--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,9 +1,9 @@
 brands:
 
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-#- name: safemarkets
-#  config_file: safemarkets.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+- name: safemarkets
+  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
 #- name: uft
