--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,12 +1,12 @@
 brands:
 
-#- name: gmo-dev
-#  config_file: gmo-dev.yml
-#- name: mtxplus
-#  config_file: mtxplus.yml
-#- name: stoxmarket
-#  config_file: stoxmarket.yml
-#- name: alphabetfx
-#  config_file: alphabetfx.yml
-#- name: kbcapitals
-#  config_file: kbcapitals.yml
+- name: gmo-dev
+  config_file: gmo-dev.yml
+- name: mtxplus
+  config_file: mtxplus.yml
+- name: stoxmarket
+  config_file: stoxmarket.yml
+- name: alphabetfx
+  config_file: alphabetfx.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
