--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -69,16 +69,20 @@ tests_config:
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_edit_trading_account  # edit trading account
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+#  class: CalendarView
+#  tests:
 #    - test_check_day_tab
 #    - test_check_week_tab
 #    - test_check_month_tab
-     - test_check_add_tasks_calendar_view #preconditions convert lead
+#     - test_check_add_tasks_calendar_view #preconditions convert lead
 #- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
 #  class: TabFinancialTransaction
 #  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button # Check search using search button
+- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
+  class: CreateDocument
+  tests:
+    - test_create_documents
